# reader

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/abi/: SolanaEscrow.kt
app/src/assets/fonts/another-typewriter/: 1001fonts-another-typewriter-eula.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/walletconnect/: MainActivity.kt  SolanaManager.kt  WalletConnectApp.kt
app/src/main/java/com/example/walletconnect/epub/: ComposePaginationEngine.kt  EpubParser.kt  EpubReaderViewModel.kt  FormattedElement.kt  TextProcessor.kt
app/src/main/java/com/example/walletconnect/pdf/: PdfReaderScreen.kt  PdfReaderViewModel.kt
app/src/main/java/com/example/walletconnect/sensors/: MotionDetector.kt
app/src/main/java/com/example/walletconnect/ui/components/: CreateBoxButton.kt
app/src/main/java/com/example/walletconnect/ui/hooks/: TxStatus.kt  UseTxButton.kt
app/src/main/java/com/example/walletconnect/ui/screens/: CreateContractScreen.kt  EpubReaderScreen.kt  EventsScreen.kt  InfoScreen.kt  SweepBoxesScreen.kt
app/src/main/java/com/example/walletconnect/utils/: BoxMetadataStore.kt  CheckpointContractStore.kt  CheckpointIndexStore.kt  EpubTextExtractor.kt  FileManager.kt  TimerContractStore.kt  VaultManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
contract/programs/escrow/: Cargo.toml
contract/programs/escrow/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
